triangles added to boxes

--- a/index.html
+++ b/index.html
@@ -11,19 +11,37 @@
 <link rel="stylesheet" href="./styles/styles.css">
 <body>
 
-  <div class="container">
-      <p class="box-one"> TITLE
-        <br>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
-      <p class="box-two"> CARD TITLE
-        <br>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <ul class="timeline-events">
+        <li class="timeline-event">
+          <header>
+            1 MAY 2016
+          </header>
+          <h1> TITLE </h1>
+            <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+          </li>
+        <li id="second-event" class="timeline-event">
+          <header>
+            25 MAY 2016
+          </header>
+          <h1> CARD TITLE </h1>
+          <br>
+            <img src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/other/dog_cool_summer_slideshow/1800x1200_dog_cool_summer_other.jpg" alt="small black dog laying in the grass">
+            <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </li>
+        <li id="third-event" class="timeline-event">
+          <header>
+            3 JUN 2016
+          </header>
+          <h1> QUOTE </h1>
+            <aside>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</aside>
+        </li>
 
-      <p class="box-three"> QUOTE
-        <br>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-  </div>
 
 </body>
 </html>
