added dots to timeline

--- a/index.html
+++ b/index.html
@@ -12,8 +12,29 @@
 <body>
 
 
+  <!-- <section class='timeline'>
+    <ul class= 'timeline-events'>
+      <li class='timeline-event'>
+        <div class="timeline-icon"></div>
+        <div class="timeline-content"></div>
+      </li>
+      <li class='timeline-event'>
+        <div class="timeline-icon"></div>
+        <div class="timeline-content"></div>
+      </li>
+      <li class='timeline-event'>
+        <div class="timeline-icon"></div>
+        <div class="timeline-content"></div>
+      </li>
+
+    </ul>
+  </section> -->
+
+  <section class= 'timeline'>
       <ul class="timeline-events">
         <li class="timeline-event">
+          <div class='timeline-icon'></div>
+          <section class='timeline-content'>
           <header>
             1 MAY 2016
           </header>
@@ -21,8 +42,12 @@
             <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </p>
+          <button type="button" name="button" class='more-button'>MORE</button>
+          </section>
           </li>
         <li id="second-event" class="timeline-event">
+          <div class='timeline-icon'></div>
+          <section class='timeline-content'>
           <header>
             25 MAY 2016
           </header>
@@ -32,8 +57,12 @@
             <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
+            <button type="button" name="button" class='more-button'>MORE</button>
+            </section>
           </li>
         <li id="third-event" class="timeline-event">
+          <div class='timeline-icon'></div>
+          <section class='timeline-content'>
           <header>
             3 JUN 2016
           </header>
@@ -41,7 +70,8 @@
             <aside>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</aside>
         </li>
-
+        </section>
+  </section>
 
 </body>
 </html>
